# review_service

./: Cargo.toml  LICENSE  README.md
assets/: admin_style.css  login_style.css  user_style.css
src/: chain.rs  database.rs  do_things.rs  main.rs
templates/: admin.html  admin_table.html  clear_order_form.html  form_reviewer.html  index.html  login.html  login_fail.html  user.html
