[package]
name = "review_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1.19.1"
lazy_static = "1.4.0"
postgres = "0.19.7"
tokio-postgres = "*"
tokio = "*"